force-app/main/default/objects/Destination_Org__c/Destination_Org__c.object-meta.xml
<CustomObject>
    <label>Destination Org</label>
    <nameField>
        <displayFormat>DO-{00000}</displayFormat>
        <label>Destination Org Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Destination Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>