force-app/main/default/objects/Destination_Org__c/fields/Dest_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Dest_Client_Id__c</fullName>
    <label>Dest Client Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>