force-app/main/default/objects/Destination_Org__c/fields/Dest_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Dest_Client_Secret__c</fullName>
    <label>Dest Client Secret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>