force-app/main/default/objects/Destination_Org__c/fields/Dest_Password__c.field-meta.xml
<CustomField>
    <fullName>Dest_Password__c</fullName>
    <label>Dest Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>