force-app/main/default/objects/Destination_Org__c/fields/Dest_Username__c.field-meta.xml
<CustomField>
    <fullName>Dest_Username__c</fullName>
    <label>Dest Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>