force-app/main/default/objects/Destination_Org__c/fields/Destination_End_Point__c.field-meta.xml
<CustomField>
    <fullName>Destination_End_Point__c</fullName>
    <label>Destination End Point</label>
    <length>100</length>
    <type>Text</type>
</CustomField>