force-app/main/default/objects/Destination_Org__c/fields/Destination_Org__c.field-meta.xml
<CustomField>
    <fullName>Destination_Org__c</fullName>
    <externalId>true</externalId>
    <label>Destination Org</label>
    <length>50</length>
    <type>Text</type>
</CustomField>